...
				)
			},
			modifier = Modifier
				.align(Alignment.BottomCenter)
				.padding(16.dp)
				.size(80.dp)
				.testTag("CameraButton"),
			shape = CircleShape
		) {}
	}
}

fun getOutputDirectory(context: Context): File {
...
